--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,22 @@ pod2htmd.tmp
 # Windows manifest files
 *.manifest
 doc-nits
+
+win32/.vs/
+
+win32/Debug/
+win32/Release/
+win32/x64/
+
+win32/libcrypto/Debug/
+win32/libcrypto/Release/
+win32/libcrypto/x64/
+
+win32/libssl/Debug/
+win32/libssl/Release/
+win32/libssl/x64/
+
+*.opendb
+*.VC.db
+*.sdf
+*.obj
