--- a/win32/libcrypto/libcrypto.rc
+++ b/win32/libcrypto/libcrypto.rc
@@ -3,8 +3,8 @@
 LANGUAGE 0x09,0x01
 
 1 VERSIONINFO
-  FILEVERSION 1,1,1,0
-  PRODUCTVERSION 1,1,1,0
+  FILEVERSION 3,0,0
+  PRODUCTVERSION 3,0,0
   FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
   FILEFLAGS 0x01L
@@ -20,16 +20,16 @@ BEGIN
         BLOCK "040904b0"
         BEGIN
             // Required:
-            VALUE "CompanyName", "The OpenSSL Project, http://www.openssl.org/\0"
-            VALUE "FileDescription", "OpenSSL shared library\0"
-            VALUE "FileVersion", "1.1.1-dev\0"
-            VALUE "InternalName", "libcrypto-1_1-x64\0"
-            VALUE "OriginalFilename", "libcrypto-1_1-x64.dll\0"
+            VALUE "CompanyName", "The OpenSSL Project, https://www.openssl.org/\0"
+            VALUE "FileDescription", "OpenSSL library\0"
+            VALUE "FileVersion", "3.0.0-dev\0"
+            VALUE "InternalName", "libcrypto\0"
+            VALUE "OriginalFilename", "libcrypto\0"
             VALUE "ProductName", "The OpenSSL Toolkit\0"
-            VALUE "ProductVersion", "1.1.1-dev\0"
+            VALUE "ProductVersion", "3.0.0-dev\0"
             // Optional:
             //VALUE "Comments", "\0"
-            VALUE "LegalCopyright", "Copyright 1998-2016 The OpenSSL Authors. All rights reserved.\0"
+            VALUE "LegalCopyright", "Copyright 1998-2019 The OpenSSL Authors. All rights reserved.\0"
             //VALUE "LegalTrademarks", "\0"
             //VALUE "PrivateBuild", "\0"
             //VALUE "SpecialBuild", "\0"
