--- a/win32/libssl/libssl.vcxproj.filters
+++ b/win32/libssl/libssl.vcxproj.filters
@@ -29,7 +29,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="libssl-1_1.rc">
+    <ResourceCompile Include="libssl.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
