--- a/win32/libcrypto/libcrypto.vcxproj.filters
+++ b/win32/libcrypto/libcrypto.vcxproj.filters
@@ -2102,9 +2102,6 @@
     <ClCompile Include="..\..\crypto\asn1\a_d2i_fp.c">
       <Filter>asn1</Filter>
     </ClCompile>
-    <ClCompile Include="ctype.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\crypto\sm4\sm4.c">
       <Filter>sm4</Filter>
     </ClCompile>
@@ -2319,6 +2316,9 @@
       <Filter>sm2</Filter>
     </ClCompile>
     <ClCompile Include="..\..\crypto\sparse_array.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\crypto\ctype.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
